testsuite/tests/patsyn/should_fail/T9161-1.stderr

T9161-1.hs:6:14: error:
    Pattern synonym ‘PATTERN’ used as a type
    In the type signature:
      wrongLift :: PATTERN
